# shket_research

./: .env.example  .gitignore  .pr-description.md  .pr-vllm-qwen.md  AGENTS.md  AUTONOMY_ANALYSIS.md  AUTONOMY_IMPROVEMENT_PLAN.md  AUTONOMY_SUMMARY.md  BROWSER_IMPLEMENTATION_PLAN.md  BROWSER_TOOL_REPORT.md  PROGRESS_TRACKING_REPORT.md  PR_BODY.txt  PR_BODY_AGENTS.md  PR_BODY_AUTONOMY.md  PR_BODY_BROWSER.md  PR_BODY_CODE_SIMPLIFIER.md  PR_BODY_COMBINED.md  PR_BODY_DEEP_RESEARCH.md  PR_BODY_FINAL.md  PR_BODY_NEW.txt  PR_BODY_PROGRESS.md  PR_BODY_SELF_HEALING.md  PR_BODY_SKILLS.md  README.md  SUMMARY.md  TASK_COMPLETION_REPORT.md  pr_body.txt  pr_body_context.md  pr_body_gh.txt  pr_body_openclaw.txt  pr_body_sqlite.md  pr_body_version.txt  pr_body_vllm_fix.md  pyproject.toml  requirements.txt  tmp_check.py  tmp_kernel_report.txt  tmp_num.py  tmp_test_script.py  tmp_test_token.txt
agent/: __init__.py  __main__.py  activity_log.py  config.py  dependencies.py  progress.py  self_repair_cron.py  session.py  session_db.py  session_globals.py
agents/: code-simplifier.md
data/: .nfs80fbb70503bbe06000019291  sessions.db
docs/: AGENTS.md-spec.md  ARCHITECTURE.md  CI_AND_PR.md  DEEP_RESEARCH-spec.md  SKILLS-spec.md  SUBAGENTS-spec.md
scripts/: auto_version_update.py
subagents/: code-simplifier.md  code-simplifier.yaml  code_simplifier.md  coder.yaml  researcher.yaml  reviewer.yaml  self-repair.yaml  tester.yaml
tests/: conftest.py  test_agent_capabilities.py  test_agents_md.py  test_bot_async.py  test_browser.py  test_cli.py  test_deep_research.py  test_deep_research_advanced.py  test_dependencies.py  test_git_tools.py  test_gitignore.py  test_healing.py  test_progress.py  test_provider.py  test_provider_switching.py  test_restart.py  (+10 more)
(+30 files in other folders)
