[project]
name = "shket-research-agent"
version = "0.0.1"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["agent: tests that call the real LLM (require OPENROUTER_API_KEY)"]
