[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shket-research-agent"
version = "0.4.6"
description = "Autonomous LLM-powered agent for Ubuntu server — CLI and Telegram bot with SQLite session persistence"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Shket"}]
keywords = ["agent", "llm", "telegram", "research", "sqlite", "session", "browser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic-ai>=1.0",
    "python-telegram-bot>=22.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[project.scripts]
agent = "agent.interfaces.cli:main"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["agent: tests that call the real LLM (require OPENROUTER_API_KEY)"]
